# GraphicsProgramming

./: .gitignore  .gitmodules  CMakeLists.txt
apps/mesh/include/: MaterialManager.hpp  SkinnedMesh.hpp
apps/mesh/shaders/: SkinnedMesh.frag  SkinnedMesh.vert  SkinnedMesh.vert.my
apps/mesh/src/: MaterialManager.cpp  SkinnedMesh.cpp  SkinnedMeshAnimation.cpp  main.cpp
apps/triangle/shaders/: 2d.frag  2d.vert  triangle.frag  triangle.vert
apps/triangle/src/: triangle.cpp
common/assets/frog-girl/: frog-girl.gltf
common/include/: fetch.hpp  opengl.hpp  scaffold.hpp  shader.hpp
common/src/: fetch.cpp  shader.cpp
common/web/: index.html
scripts/: project-pre-build.py
